--- a/HW2/hw2style.css
+++ b/HW2/hw2style.css
@@ -5,14 +5,24 @@
 .enter{
     width: 100%;
     background-color: rgb(14, 3, 44);
+    margin: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
     flex-wrap: wrap;   
 }
+.sign{
+    width: 1350px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    
+}
 .fa-solid {
     color: aliceblue;
+    margin-right: 10px;
 }
 .line{
     color: aliceblue;
@@ -20,7 +30,6 @@
 }
 div.enter a{
     color: aliceblue;
-    margin: 10px;
     text-decoration: none;
 }
 .about{
@@ -33,12 +42,13 @@ div.enter a{
     flex-wrap: wrap;
 }
 .about img{
-    width: 10%;
-    margin: 20px; 
+    width: 160px;
+    /* margin: 20px;  */
 }
 .about a{
     text-decoration: none;
     align-items: center;
+    padding: 10px;
     color: black;
 }
 .about a.freeTry{
@@ -50,15 +60,13 @@ div.enter a{
     border-radius: 30px; 
 } 
 .group{
-    width: 100%; 
-    height: 600px;
-    margin: auto;
-    align-items: center;
+    width: 100%;
 }
 .row{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
     justify-content: center;
     background-color: rgb(14, 3, 44);
     /* padding-bottom: 250px; */
@@ -70,7 +78,9 @@ div.enter a{
 }
 .row .pic img{
     width: 100%;
-    padding: 100px 0px 50px 20px;
+    margin: auto;
+
+    /* padding: 100px 0px 50px 20px; */
 }
 .row .txt{
     width: 640px;
@@ -96,6 +106,7 @@ div.enter a{
     border: none;
     border-bottom-style: solid;
     background-color: rgb(14, 3, 44);
+    margin-top: 10px;
     margin-right: 10px;
 }
 .row .txt a{
@@ -106,11 +117,30 @@ div.enter a{
     padding: 10px;
     border-radius: 30px; 
 }
-.intitle{
-    text-align: center;
-    margin-top: 200px;
-    margin-bottom: 120px;
+.home-intitle{
+    width: 100%;
+    padding-top:50px ;
+
 }
+.intitle{
+    width: 1350px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 120px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+
+}
+.intitle h2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .ingroup{
     width: 1200px;
     margin: auto;
@@ -136,6 +166,13 @@ div.enter a{
     margin: 10px;
     list-style: none;
 }
+.inrow .intxt h2{
+    padding-bottom: 30px;
+}
+.inrow .intxt p{
+    line-height: 20px;
+    margin-bottom: 20px;
+}
 .intxt a{
     color: blue;
     text-decoration: none;
@@ -146,9 +183,13 @@ div.enter a{
     flex-wrap: wrap;
     margin-bottom: 10px;
 }
-.list div{
+.list li{
     width: 300px;
-    
+    display: flex;
+    flex-wrap: wrap;
+}
+.list i{
+    color: aqua;
 }
 .function {
     background-color: #f4f5f7;
@@ -157,6 +198,8 @@ div.enter a{
     justify-content: center;
     align-items: center;
     margin: auto;
+    padding-top: 50px;
+    padding-bottom: 40px;
 }
 .function h2{
     width: 100%;
@@ -187,6 +230,7 @@ div.enter a{
 .inserve .inp{
     width: 400px;
     font-size: 20px;
+    /* line-height: 20px; */
 }
 .brand{
     width: 1350px;
@@ -240,12 +284,19 @@ div.enter a{
 .inshow img{
     width: 100%;
 }
-.end{
+.asia{
     width: 100%;
     height: 490px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
+    background-color: #032249;
+    justify-content: center;
+}
+.asiafooter{
+    width: 1350px;
+    display: flex;
+    justify-content: flex-end;
     background:#032249 url(https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820) no-repeat right bottom;
 }
 .footp{
@@ -253,6 +304,7 @@ div.enter a{
     color: aliceblue;
     font-size: 40px;
     margin: auto;
+
 }
 .footp li{
     background-color: rgb(18, 61, 250);
@@ -268,59 +320,59 @@ div.enter a{
     margin-left: 40px;   
 }
 .section{
-background-color: #0f1b31;
+    background-color: #0f1b31;
 }
 .footerwrap{
-width: 100%;
-height: auto;
-background-color: #0f1b31;
-margin: auto;
-display: flex;
-justify-content: center;
+    width: 100%;
+    height: auto;
+    background-color: #0f1b31;
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
 .footerlist{
-width: 1350px;
-border-top: 1px solid grey;
-margin-top: 20px;
-display: flex;
-color: white;
-justify-content: space-between;
+    width: 1350px;
+    border-top: 1px solid grey;
+    margin-top: 20px;
+    display: flex;
+    color: white;
+    justify-content: space-between;
 }
 .footerlist ul{
-list-style: none;
+    list-style: none;
 }
 .footerlist a{
-text-decoration: none;
-color: white;
-line-height: 30px;
+    text-decoration: none;
+    color: white;
+    line-height: 30px;
 }
 .footercol{
-width: 150px;
+    width: 150px;
 }
 .footercol h4, .footercolspecial h4{
-margin-bottom: 20px;
-margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .footercolspecial{
-width: 250px;
+    width: 250px;
 }
 .C19{
-width: 100%;
-background-color: #0f1b31;
-margin-bottom: 10px;
+    width: 100%;
+    background-color: #0f1b31;
+    margin-bottom: 10px;
 }
 .COVID-19{
-width: 1350px;
-background-color: #0f1b31;
-margin: auto;
-display: flex;
-justify-content: flex-end;
+    width: 1350px;
+    background-color: #0f1b31;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
 }
 .COVID-19 a{
-color: #000000;
-text-decoration: none;
-background-color: #dbf8ed;
-padding: 20px 40px;
+    color: #000000;
+    text-decoration: none;
+    background-color: #dbf8ed;
+    padding: 20px 40px;
 }
 .footerbom{
     width: 100%;
@@ -352,4 +404,5 @@ padding: 20px 40px;
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
