--- a/HW3/position.css
+++ b/HW3/position.css
@@ -94,7 +94,7 @@ section:nth-of-type(even) .pic .main-pic{
 }
 section:nth-of-type(even) .innovation{
     margin-left: auto;
-    margin-right: 40px;
+    margin-right: 15%;
 }
 .innovation .slg{
     color: #f00;
